# mama-ai-clinic

./: .gitignore  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: app.py  config.py  requirements.txt
app/knowledge/: README.md
app/knowledge/essential_medicines/: dosing_tables.json  eml_24.json  interactions.json
app/knowledge/imnci/: chart_booklet.json  classify.json  danger_signs.json
app/knowledge/training/: case_studies.json  chw_modules.json  quiz_bank.json
app/routes/: chat.py  medicines.py  status.py  training.py  triage.py
app/services/: dosing_engine.py  knowledge_search.py  llm_client.py  prompt_templates.py  triage_engine.py
app/static/: manifest.json
app/static/css/: style.css
app/static/js/: chat.js  triage.js
app/templates/: base.html  chat.html  index.html  status.html
app/templates/medicines/: search.html
app/templates/training/: modules.html
app/templates/triage/: start.html
docs/: HARDWARE_BOM.md  THESIS.md
eval/: safety_eval.py
image/: build.sh  flash.sh
inference/: benchmark.sh  config.yaml  download_model.sh
networking/: setup_hotspot.sh
scripts/: setup_dev.sh
tests/: conftest.py  test_triage_engine.py
